Add Jekyll to site

--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body {
- background-color: magenta;
+ background-color: rgb(115, 7, 115);
 }
 h1 {
- color: blue;
+ color: rgb(179, 255, 0);
 }
 p {
  color: red;
